--- a/public/create_bid.html
+++ b/public/create_bid.html
@@ -43,6 +43,8 @@
         </form>
     </div>
 
+    <div id="error" style="color:red"></div>
+
     <script src="create_bid.js"></script>
     </body>
 </html>
