throw 409 error when bid is too high or job is not active and display error message on client

--- a/public/create_bid.html
+++ b/public/create_bid.html
@@ -17,6 +17,8 @@
 
     <div id="posts"></div>
 
+    <!-- TODO: de-acivate form when job is not active -->
+
     <div class="container">
         <form action="">
             <div class="form-group">
